--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,24 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Eden Tsai
 subtitle:
-description:
-author: John Doe
-language:
-timezone:
+description: Eden Tsai - Blog
+author: Eden Tsai
+author_title: 'Programmer'
+avatar: css/images/avatar.png
+location: 'Taiwan, Taipei'
+follow: https://github.com/edentsai/
+email: edentsai231@gmail.com
+language: en
+timezone: Asia/Taipei
+since: 2000 # The start year showing in your copyright section.
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://blog.edentsai.net
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -30,7 +36,7 @@ skip_render:
 # Writing
 new_post_name: :title.md # File name of new posts
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: true # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
 render_drafts: false
@@ -63,7 +69,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
-theme: landscape
+theme: icarus
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
