--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "hexo": "^3.1.0",
     "hexo-clean-css": "0.0.2",
+    "hexo-easy-edit": "^1.3.0",
     "hexo-generator-archive": "^0.1.3",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.1.3",
