--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,13 @@ pagination_dir: page
 clean_css:
   exclude:
 
+### hexo-generator-feed: https://github.com/hexojs/hexo-generator-feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+
 ## Themes: http://hexo.io/themes/
 theme: icarus
 
