--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-search": "^1.0.2",
     "hexo-generator-seo-friendly-sitemap": "0.0.11",
     "hexo-generator-tag": "^0.1.2",
+    "hexo-html-minifier": "0.0.1",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
     "hexo-renderer-stylus": "^0.3.0",
