--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-generator-seo-friendly-sitemap": "0.0.11",
     "hexo-generator-tag": "^0.1.2",
     "hexo-html-minifier": "0.0.1",
+    "hexo-imagemin": "^0.1.0",
     "hexo-renderer-ejs": "^0.1.0",
     "hexo-renderer-marked": "^0.2.4",
     "hexo-renderer-stylus": "^0.3.0",
