--- a/_config.yml
+++ b/_config.yml
@@ -118,4 +118,6 @@ theme: icarus
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repo: git@github.com:edentsai/edentsai.github.io.git
+  branch: master
