--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "hexo": "^3.1.0",
     "hexo-clean-css": "0.0.2",
+    "hexo-deployer-git": "0.0.4",
     "hexo-easy-edit": "^1.3.0",
     "hexo-filter-fenced-code": "0.0.5",
     "hexo-generator-archive": "^0.1.3",
